Fixed image alignment code to handle image loading race condition; entry text styles.

--- a/tei.css
+++ b/tei.css
@@ -1,13 +1,19 @@
 /* TEI styles */
 
 p.DoSBlockquote {
-	padding: 20px 50px;
+	padding: 0 50px;
 }
 span.italics {
 	font-style: italic;
 }
 span.bold {
 	font-weight: bold;
+}
+a.annotation.hide {
+	cursor: auto;
+}
+#content a.annotation.hide:hover {
+	text-decoration: none;
 }
 a.annotation.highlighted {
 	background-color: yellow;
